Changed the font-weight attribute of label element in float-label.html

--- a/public/lib/float-label.html
+++ b/public/lib/float-label.html
@@ -25,17 +25,20 @@
     .floatLabel label {
         bottom: 0;
         cursor: text;
+        font-weight: 500;
         text-transform: capitalize;
     }
     
     .floatLabel input:focus ~ label {
         top: 0;
         color: black;
+        font-weight: 700;
     }
     
     .floatLabel input.filled + label {
         top: 0;
         color: gray;
+        font-weight: 600;
     }
 
 </style>
